force-app/main/default/objects/Course_Checklist_Item_Template__c/Course_Checklist_Item_Template__c.object-meta.xml
<CustomObject>
    <label>Course Checklist Item Template</label>
    <nameField>
        <displayFormat>CCIT-{0000}</displayFormat>
        <label>Course Checklist Item Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Checklist Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>