force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>LearningCourse</referenceTo>
    <relationshipLabel>Course Checklist Item Templates</relationshipLabel>
    <relationshipName>Course_Checklist_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>