force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Owner_Roles__c.field-meta.xml
<CustomField>
    <fullName>Owner_Roles__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>