force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Course Checklist Item Templates</relationshipLabel>
    <relationshipName>Course_Checklist_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>