force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Reminder_Logic_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Logic_Calculation__c</fullName>
    <label>Reminder Logic Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term Start</fullName>
            </value>
            <value>
                <fullName>Term End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>