force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Reminder_Reference_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Reference_Days__c</fullName>
    <label>Reminder Reference Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>