force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Activity</label>
    <type>TextArea</type>
</CustomField>