force-app/main/default/objects/Course_Checklist_Item_Template__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>AcademicSession</referenceTo>
    <relationshipLabel>Course Checklist Item Templates</relationshipLabel>
    <relationshipName>Course_Checklist_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>