force-app/main/default/objects/Course_Checklist_Item_Template__c/recordTypes/Course_Manager_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Course_Manager_Checklist</fullName>
    <active>true</active>
    <description>Template for Course Manager Checklist</description>
    <label>Course Manager Checklist</label>
</RecordType>