force-app/main/default/objects/Course_Checklist_Item_Template__c/recordTypes/Outgoing_Exchange_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Outgoing_Exchange_Checklist</fullName>
    <active>true</active>
    <description>Templates for Outgoing Exchange Case checklist items</description>
    <label>Outgoing Exchange Checklist</label>
</RecordType>