force-app/main/default/objects/Course_Checklist_Item_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>