force-app/main/default/objects/Course_Checklist_Item_Template__c/listViews/Course_Tracker_Actions.listView-meta.xml
<ListView>
    <fullName>Course_Tracker_Actions</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template_Type__c</field>
        <operation>contains</operation>
        <value>Course Tracker</value>
    </filters>
    <label>Course Tracker Actions</label>
</ListView>