force-app/main/default/objects/Course_Checklist_Item_Template__c/listViews/End_of_Term_Actions.listView-meta.xml
<ListView>
    <fullName>End_of_Term_Actions</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template_Type__c</field>
        <operation>equals</operation>
        <value>End of Term Action</value>
    </filters>
    <label>End of Term Actions</label>
</ListView>