force-app/main/default/objects/Course_Checklist_Item_Template__c/listViews/Start_of_Term_Tasks.listView-meta.xml
<ListView>
    <fullName>Start_of_Term_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template_Type__c</field>
        <operation>equals</operation>
        <value>Start of Term Action</value>
    </filters>
    <label>Start of Term Actions</label>
</ListView>